--- a/V01E01/referencias.bib
+++ b/V01E01/referencias.bib
@@ -54,7 +54,7 @@
 	pages     = {1--5},
 }
 
-@article{pezzullo_carga_2016,
+@article{pezzullo2016,
 	title     = {La carga económica de las condiciones cardíacas en Panamá},
 	copyright = {Derechos de autor 2018 Revista Médica de Panamá - ISSN 2412-642X},
 	issn      = {2412-642X},
@@ -65,4 +65,23 @@
 	journal   = {Revista Médica de Panamá - ISSN 2412-642X},
 	author    = {Pezzullo, Stevens Bryce and Lynne and Verdian, Lara and Tomllinson, Josh and Estrada, Claudia Aguilar and George, Alice and Gonzalez, Baldomero},
 	year      = {2016},
+	volume    = {36},
+	number    = {3},
+	pages     = {3--9},
+}
+
+@article{guiaesc_2021,
+	title = {Guía ESC 2020 sobre el diagnóstico y tratamiento de la fibrilación auricular, desarrollada en colaboración de la European Association of Cardio-Thoracic Surgery (EACTS)},
+	volume = {74},
+	issn = {0300-8932},
+	url = {http://www.revespcardiol.org/es-guia-esc-2020-sobre-el-articulo-S0300893220306953},
+	doi = {10.1016/j.recesp.2020.10.022},
+	language = {es},
+	number = {5},
+	journal = {Revista Española de Cardiología},
+	author = {Hindricks, Gerhard and Potpara, Tatjana and Dagres, Nikolaos and Arbelo, Elena and Bax, Jeroen J. and Blomström-Lundqvist, Carina and Boriani, Giuseppe and Castella, Manuel and Dan, Gheorghe-Andrei and Dilaveris, Polychronis E. and Fauchier, Laurent and Filippatos, Gerasimos and Kalman, Jonathan M. and Meir, Mark La and Lane, Deirdre A. and Lebeau, Jean-Pierre and Lettino, Maddalena and Lip, Gregory Y. H. and Pinto, Fausto J. and Neil Thomas, G. and Valgimigli, Marco and Van Gelder, Isabelle C. and Van Putte, Bart P. and Watkins, Caroline L.},
+	month = {5},
+	year = {2021},
+	note = {Publisher: Elsevier},
+	pages = {437.e1--437.e116},
 }
