--- a/V01E01/referencias.bib
+++ b/V01E01/referencias.bib
@@ -85,3 +85,12 @@
 	note = {Publisher: Elsevier},
 	pages = {437.e1--437.e116},
 }
+
+@article{panamerica10,
+	title     = {Pilar en una familia de destacados juristas},
+	journal   = {{Panamá América}},
+	author    = {{Redacción Día D}},
+	month     = {9},
+	year      = {2010-09-11},
+	day       = {11},
+}
