--- a/V01E01/gaceta.tex
+++ b/V01E01/gaceta.tex
@@ -23,12 +23,18 @@
 	backend=biber,
 	style=nejm,
 ]{biblatex}
-\let\cite=\supercite %% Hace que las referencias aparezcan como superíndices
-\addbibresource{referencias.bib} %% Añade el documento con referencias bibtex
-\renewcommand*{\bibfont}{\footnotesize} %% Reduce el tamaño de fuente de las referencias
+
+%% Hace que las referencias aparezcan como superíndices
+\let\cite=\supercite
+
+%% Añade el documento con referencias bibtex
+\addbibresource{referencias.bib}
+
+%% Reduce el tamaño de fuente de las referencias
+\renewcommand*{\bibfont}{\footnotesize}
 
 %% ============================================================================
-%% Viñetas
+%% Box para viñetas
 %% ============================================================================
 \usepackage[many]{tcolorbox}
 \newtcolorbox{boxClinica}{
@@ -36,7 +42,8 @@
 	boxrule = 0pt,
 	toprule = 1.5pt, % top rule weight
 	enhanced,
-	fuzzy shadow = {0pt}{-2pt}{-0.5pt}{0.5pt}{black!35} % {xshift}{yshift}{offset}{step}{options} 
+	%% {xshift}{yshift}{offset}{step}{options}
+	fuzzy shadow = {0pt}{-2pt}{-0.5pt}{0.5pt}{black!35}
 }
 
 %% ============================================================================
@@ -62,9 +69,9 @@
 
 \newcommand{\NewsAuthor}[1]{%
 	\hfill Por \textsc{#1} \vspace{4pt}
-	\par \normalfont}	
+	\par \normalfont}
 
-%% 
+%%
 \usepackage{newspaper-mod}
 %%
 \renewcommand{\headlinestyle}{\itshape\Large\lsstyle}
@@ -72,6 +79,7 @@
 %%
 
 %%%%%%%%%  Front matter   %%%%%%%%%%
+
 
 \begin{document}
 
@@ -82,22 +90,39 @@
 
 \byline{La Gaceta Galénica}{Moisés Serrano Samudio}
 
-La Gaceta Galénica nace con esta primera edición como una publicación mensual de la coordinación de docencia de la Policlínica Lic. Manuel María Valdés. Es nuestro interés lanzar una edición el primer miércoles de cada mes con temas cortos dirigidos a mantener actualizados a los colegas médicos que desempeñan sus funciones en los distintos servicios de urgencias médico quirúrgicas en instalaciones de primer y segundo nivel de atención en Panamá.
+La Gaceta Galénica nace con esta primera edición como una publicación mensual de
+la Coordinación de Docencia del Servicio de Urgencias de la Policlínica Lic.
+Manuel María Valdés. Es nuestro interés lanzar una edición el primer miércoles
+de cada mes con temas cortos dirigidos a mantener actualizados a los colegas
+médicos que desempeñan sus labores en los distintos servicios de urgencias
+médico-quirúrgicas en instalaciones de primer y segundo nivel de atención en
+Panamá.
 
-Se publica como un boletín digital informativo corto, de una a dos páginas de extensión distribuido por canales digitales. El tema central de la publicación se presenta acompañado de una viñeta clínica, a partir del cual se presentarán de manera práctica los aspectos más importantes de la patología abordada con su respectiva clase y nivel de evidencia.
+Se publica como un boletín digital informativo corto, de una a dos páginas de
+extensión distribuido por canales digitales. El tema central de la publicación
+se presenta acompañado de una viñeta clínica, a partir del cual se discutirán
+de manera práctica los aspectos más importantes de la patología abordada con su
+respectiva clase y nivel de evidencia.
 
-Planeamos incluir cápsulas históricas sobre la medicina en Panamá y repasar temas de bioestadística y epidemiología para ofrecer a nuestros lectores herramientas para refrescar la lectura crítica de la literatura médico-científica.
+Planeamos incluir cápsulas históricas sobre la medicina en Panamá y repasar
+temas de bioestadística y epidemiología para ofrecer a nuestros lectores
+herramientas para refrescar la lectura crítica de la literatura
+médico-científica.
 
-Sin mas preámbulo, esperamos que disfruten de su lectura tanto como nosotros disfrutamos preparando el contenido. Feliz lectura.
+Sin más preámbulo, esperamos que disfruten de su lectura tanto como nosotros
+disfrutamos preparando el contenido. Feliz lectura.
 
 \closearticle
 
 
 \headline{¿Quién fue Manuel María Valdés?}
 
-Abogado, economista y periodista. Nace en 1907, proveniente de una familia de destacados juristas en el ámbito nacional de los primeros cincuenta años de la República de Panamá.
-
-Al Lcdo. Manuel María Valdés, debemos el honor de la creación de la Caja de Seguro Social. La gesta que llevo a la fundación de la institución máxima de la seguridad social en Panamá, tuvo sus albores en 1937 en una reunión en París de Arnulfo Arias Madrid y Manuel María Valdés donde intercambiaban opiniones sobre seguros obligatorios\cite{Pinock95}.
+Abogado, economista y periodista. Nace en 1907, proveniente de una familia de
+destacados juristas en el ámbito nacional. Nace del matrimonio entre Manuel
+María Valdés Arce, quien fue el primer director de los Archivos Nacionales y
+hermano de Ramón Maximiliano Valdés Arce, expresidente de la República de
+Panamá; y Emma Guardia Vieto que destacaba por un brillante intelecto, hablar
+varios idiomas y ser ávida lectora de literatura universal\cite{panamerica10}.
 
 \begin{wrapfigure}{L}{0.18\textwidth}
 	\begin{center}
@@ -107,28 +132,73 @@ Al Lcdo. Manuel María Valdés, debemos el honor de la creación de la Caja de S
 	\caption*{Lic. Manuel María Valdés}
 \end{wrapfigure}
 
-Es la habilidad política junto a la orientación técnica de Don Manuel María Valdés y la tracción del Partido Liberal Unido lo que lleva a manos del Presidente Arnulfo Arias Madrid en 1941 a la firma de la Ley 23 del 21 de marzo de ese año, publicada en la Gaceta Oficial No. 8481 de marzo de 1941\cite{Pinock95},\cite{gaceta1941}.
+Al Lcdo. Manuel María Valdés, debemos el honor de la creación de la Caja de
+Seguro Social. La gesta que llevo a la fundación de la institución máxima de
+la seguridad social en Panamá, tuvo sus albores en 1937 en una reunión en
+París entre Arnulfo Arias Madrid y Manuel María Valdés donde intercambiaban
+opiniones sobre seguros obligatorios\cite{Pinock95}.
 
-Fundador de tres diarios: <<El Día>>, <<La Hora>> y <<El Mundo>>. Destacan en su producción bibliográfica, dos obras: Panamá y su soberanía monetaria (1951), Intervenciones electorales en Panamá (1932)\cite{Leonard15}.
+Es la habilidad política y orientación técnica de Don Manuel María Valdés en
+conjunto con la tracción del Partido Liberal Unido, que fue fundado por el
+expresidente Belisario Porras Barahona, lo que lleva a manos, en aquel entonces,
+al Presidente Arnulfo Arias Madrid en 1941 a la firma de la Ley 23 del 21 de
+marzo de ese año, publicada en la Gaceta Oficial No. 8481 de marzo de
+1941\cite{Pinock95},\cite{gaceta1941}. Nace así la Caja de Seguro Social.
 
-Fallece en 1968, luego de toda una prolífica carrera. Apodado de cariño Nen, por sus familiares, amigos, conocidos y sus discípulos del periodismo. Es despedido en noviembre de ese año\cite{Lot68}.
+Fundador de tres diarios: <<El Día>>, <<La Hora>> y <<El Mundo>>. Destacan en
+su producción bibliográfica, dos obras: Panamá y su soberanía monetaria (1951),
+Intervenciones electorales en Panamá (1932)\cite{Leonard15}.
+
+Fallece en 1968, luego de toda una prolífica carrera. Apodado de cariño Nen,
+por sus familiares, amigos, conocidos y sus discípulos del periodismo. Es
+despedido en noviembre de ese año\cite{Lot68}.
 
 \closearticle
 
 
 \headline{Fibrilación atrial: Diagnóstico y manejo}
 
-La fibrilación atrial (AF) es una patología que se ve con regular frecuencia en los servicios de urgencias. En mayores de 65 años tiene una incidencia de cerca del 10\% y se asocia a una serie de comorbilidades y predispone al desarrollo de patologías de gran morbimortalidad como el ictus isquémico y el infarto agudo al miocardio. Se estima una prevalencia para América Latina y El Caribe en 430 de cada 100000 habitantes\cite{brundel_atrial_2022}.
+La fibrilación atrial (AF) es una patología que se ve con regular frecuencia
+en los servicios de urgencias. En mayores de 65 años tiene una incidencia
+cercana al 10\% y se asocia a una serie de comorbilidades y predispone al
+desarrollo de patologías de gran morbimortalidad como el ictus isquémico y el
+infarto agudo al miocardio. Se estima una prevalencia para América Latina y El
+Caribe en 430 de cada 100000 habitantes\cite{brundel_atrial_2022}.
 
-En Panamá, Pezzullo y colab. estimaron que el 0.9\% de la población adulta mayor de 20 años es afectada por la AF y que en el año 2015, la AF representó un costo de 19 millones de Balboas para el sistema de salud\cite{pezzullo2016}.
+En Panamá, Pezzullo y colab. estimaron que el 0.9\% de la población adulta
+mayor de 20 años es afectada por la AF y que en el año 2015, la AF representó
+un costo de 19 millones de Balboas para el sistema de salud
+panameño\cite{pezzullo2016}.
 
 \begin{boxClinica}
 
-Paciente masculino de 64 años es traído al servicio de urgencias por personal de prehospitalaria por síncope con previa historia de palpitaciones, mareos, debilidad y diaforesis. Sus signos vitales son: PA 160/106 mmHg, FC 131 lpm, FR 21 cpm, SpO2 95\%.
+Paciente masculino de 64 años es traído al servicio de urgencias por personal
+de prehospitalaria por síncope con previa historia de palpitaciones, mareos,
+debilidad y diaforesis. Sus signos vitales son: PA 160/106 mmHg, FC 131 lpm,
+FR 21 cpm, SpO2 95\%.
 
 \end{boxClinica}
 
-Dentro del abordaje del paciente presentado en la viñeta clínica anterior, además de la historia clínica se debe realizar un electrocardiograma. El ECG tiene una clase y nivel de evidencia IB y es diagnóstico de AF si un ECG de 12 derivadas o en un trazo de 1 derivación $\geq$ 30 segundos se presentan ondas P no discernibles e intervalos RR irregulares\cite{guiaesc_2021}.
+Dentro del abordaje del paciente presentado en la viñeta clínica anterior,
+además de la historia clínica y su respectivo examen físico se debe realizar un
+electrocardiograma. El ECG tiene una clase y nivel de evidencia IB en AF y es
+diagnóstico de AF si un ECG de 12 derivadas o en un trazo de 1 derivación
+$\geq$ 30 segundos se presentan ondas P no discernibles e intervalos RR
+irregulares\cite{guiaesc_2021}.
+
+La causa raíz de la AF la encontramos en la electropatología de focos ectópicos
+que se ubican el 95\% de las veces en las venas pulmonares. Este sustrato
+tisular gatilla la actividad eléctrica en las aurículas de manera irregular
+causando la contracción desordenada del tejido muscular en la aurícula. Otros
+focos ectópicos encontrados en las venas cavas superior e inferior también
+ocasionan un mecanismo eléctrico parecido en las aurículas pero en mucho menor
+medida. Las lesiones tisulares subyacentes en las aurículas producto de
+isquemia juegan también un papel importante ya que permiten el desarrollo de un
+sustrato tisular arritmogénico que lleva también a la despolarización
+desordenada de las aurículas. Otro aspecto fisiopatológico destacable son las
+alteraciones genéticas que se traducen en mutaciones en canales de sodio,
+potasio y calcio que juegan un papel fundamental en la fisiología del ciclo
+cardíaco\cite{brundel_atrial_2022}.
 
 \closearticle
 
