--- a/V01E01/referencias.bib
+++ b/V01E01/referencias.bib
@@ -94,3 +94,38 @@
 	year      = {2010-09-11},
 	day       = {11},
 }
+
+@article{mairesse2017,
+	title = {Screening for atrial fibrillation: a {European} {Heart} {Rhythm} {Association} ({EHRA}) consensus document endorsed by the {Heart} {Rhythm} {Society} ({HRS}), {Asia} {Pacific} {Heart} {Rhythm} {Society} ({APHRS}), and {Sociedad} {Latinoamericana} de {Estimulación} {Cardíaca} y {Electrofisiología} ({SOLAECE})},
+	volume = {19},
+	issn = {1099-5129},
+	url = {https://doi.org/10.1093/europace/eux177},
+	doi = {10.1093/europace/eux177},
+	number = {10},
+	urldate = {2022-01-06},
+	journal = {EP Europace},
+	author = {Mairesse, Georges H and Moran, Patrick and Van Gelder, Isabelle C and Elsner, Christian and Rosenqvist, Marten and Mant, Jonathan and Banerjee, Amitava and Gorenek, Bulent and Brachmann, Johannes and Varma, Niraj and Glotz de Lima, Gustavo and Kalman, Jonathan and Claes, Neree and Lobban, Trudie and Lane, Deirdre and Lip, Gregory Y H and Boriani, Giuseppe and {ESC Scientific Document Group}},
+	month = {10},
+	year = {2017},
+	pages = {1589--1623},
+}
+
+
+@article{lip_abc_2017,
+	title = {The ABC pathway: an integrated approach to improve AF management},
+	volume = {14},
+	copyright = {2017 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1759-5010},
+	shorttitle = {The ABC pathway},
+	url = {https://www.nature.com/articles/nrcardio.2017.153},
+	doi = {10.1038/nrcardio.2017.153},
+	abstract = {The Atrial fibrillation Better Care (ABC) pathway for integrated management provides a simple strategy (Avoid stroke, Better symptom management, and Cardiovascular and comorbidity risk reduction) that helps to improve awareness and detection, and reminds clinicians of the simple decision-making steps for management of patients with atrial fibrillation in a holistic approach.},
+	language = {en},
+	number = {11},
+	urldate = {2022-06-01},
+	journal = {Nature Reviews Cardiology},
+	author = {Lip, Gregory Y. H.},
+	month = {11},
+	year = {2017},
+	pages = {627--628},
+}
