--- a/V01E01/gaceta.tex
+++ b/V01E01/gaceta.tex
@@ -145,6 +145,11 @@ al Presidente Arnulfo Arias Madrid en 1941 a la firma de la Ley 23 del 21 de
 marzo de ese año, publicada en la Gaceta Oficial No. 8481 de marzo de
 1941\cite{Pinock95},\cite{gaceta1941}. Nace así la Caja de Seguro Social.
 
+Dedico gran parte de su vida al ejercicio del derecho en los bufetes <<Valdés y
+Valdés>>, trabajando junto a su hermano Eduardo Valdés; y <<Valdés, Valdés y
+De Castro>>, cuando se asociaron con Woodrow De Castro, otro destacado jurista
+panameño.
+
 Fundador de tres diarios: <<El Día>>, <<La Hora>> y <<El Mundo>>. Destacan en
 su producción bibliográfica, dos obras: Panamá y su soberanía monetaria (1951),
 Intervenciones electorales en Panamá (1932)\cite{Leonard15}.
@@ -158,7 +163,7 @@ despedido en noviembre de ese año\cite{Lot68}.
 
 \headline{Fibrilación atrial: Diagnóstico y manejo}
 
-La fibrilación atrial (AF) es una patología que se ve con regular frecuencia
+La fibrilación atrial (FA) es una patología que se ve con regular frecuencia
 en los servicios de urgencias. En mayores de 65 años tiene una incidencia
 cercana al 10\% y se asocia a una serie de comorbilidades y predispone al
 desarrollo de patologías de gran morbimortalidad como el ictus isquémico y el
@@ -166,7 +171,7 @@ infarto agudo al miocardio. Se estima una prevalencia para América Latina y El
 Caribe en 430 de cada 100000 habitantes\cite{brundel_atrial_2022}.
 
 En Panamá, Pezzullo y colab. estimaron que el 0.9\% de la población adulta
-mayor de 20 años es afectada por la AF y que en el año 2015, la AF representó
+mayor de 20 años es afectada por la FA y que en el año 2015, la FA representó
 un costo de 19 millones de Balboas para el sistema de salud
 panameño\cite{pezzullo2016}.
 
@@ -175,18 +180,23 @@ panameño\cite{pezzullo2016}.
 Paciente masculino de 64 años es traído al servicio de urgencias por personal
 de prehospitalaria por síncope con previa historia de palpitaciones, mareos,
 debilidad y diaforesis. Sus signos vitales son: PA 160/106 mmHg, FC 131 lpm,
-FR 21 cpm, SpO2 95\%.
+FR 21 cpm, SpO2 95\%, peso 125 kg, estatura 1,65 m. Tiene como antecedentes
+importantes tabaquismo y dislipidemia.
 
 \end{boxClinica}
 
 Dentro del abordaje del paciente presentado en la viñeta clínica anterior,
 además de la historia clínica y su respectivo examen físico se debe realizar un
-electrocardiograma. El ECG tiene una clase y nivel de evidencia IB en AF y es
-diagnóstico de AF si un ECG de 12 derivadas o en un trazo de 1 derivación
+electrocardiograma. El ECG tiene una clase y nivel de evidencia IB en FA y es
+diagnóstico de FA si un ECG de 12 derivadas o en un trazo de 1 derivación
 $\geq$ 30 segundos se presentan ondas P no discernibles e intervalos RR
 irregulares\cite{guiaesc_2021}.
 
-La causa raíz de la AF la encontramos en la electropatología de focos ectópicos
+Dentro de la viñeta clínica propuesta, destacan los factores de riesgo
+cardiovasculares clásicos. En este paciente, están presentes obesidad,
+tabaquismo y dislipidemia.
+
+La causa raíz de la FA la encontramos en la electropatología de focos ectópicos
 que se ubican el 95\% de las veces en las venas pulmonares. Este sustrato
 tisular gatilla la actividad eléctrica en las aurículas de manera irregular
 causando la contracción desordenada del tejido muscular en la aurícula. Otros
@@ -199,6 +209,41 @@ desordenada de las aurículas. Otro aspecto fisiopatológico destacable son las
 alteraciones genéticas que se traducen en mutaciones en canales de sodio,
 potasio y calcio que juegan un papel fundamental en la fisiología del ciclo
 cardíaco\cite{brundel_atrial_2022}.
+
+Existen una variada clasificación de FA, pero la más aceptada es según
+aparición y duración del episodio.
+
+\begin{itemize}
+    \item \footnotesize{\textbf{FA diagnosticada por primera vez}: Diagnosticada por primera vez independientemente de duración o gravedad de síntomas.}
+    \item \textbf{FA paroxística}: Revierte espontáneamente o con intervención en menos de 7 días.
+    \item \textbf{FA persistente}: Con duración mayor a 7 días, aún luego de intervención.
+		\item \textbf{FA persistente de larga duración}: Duración mayor a un año, tras adoptar estrategia para control de ritmo cardíaco.
+		\item \textbf{FA permanente}: No se adoptan nuevas medidas para control de FA. Representa más una actitud terapéutica del paciente o el médico que atributo fisiopatológico inherente a la FA. Si se realiza una intervención, se reclasifica como FA persistente de larga duración.
+\end{itemize}
+
+Los avances en la clasificación, por ejemplo de FA paroxística a FA persistente,
+implican un avance en el remodelado estructural auricular o un empeoramiento
+de la miocardiopatía auricular.
+
+Se considera al ECG de 12 derivadas como la técnica estándar de diagnóstico en
+FA\cite{mairesse2017}. Sin embargo para el cribado un intervención muy
+costo-efectiva es la palpación del pulso con una sensibilidad de 87-97\% y
+especificidad de 70-81\%, esta simple intervención tiene una clase y nivel de
+evidencia IB. Es destacable también el uso de monitores de presión arterial
+automatizados y el uso de dispositivos \emph{wereables} como relojes o bandas
+electrónicas que con sus algoritmos de fotopletismografía ofrecen también una
+buena sensibilidad y especificidad, incluso con clase y nivel de evidencia
+IB\cite{guiaesc_2021}.
+
+Regresando al paciente de la viñeta clínica, sin antecedentes de FA previa
+conocida, habiendo realizado el ECG de 12 derivadas, con toda seguridad nos
+encontramos ante un paciente con FA paroxística. Continuando el abordaje de
+este paciente, implementamos la estrategia de la vía ABC\cite{lip_abc_2017}.
+«A», anticoagulacion / prevención del ictus; «B», buen control de los síntomas;
+«C», control de los factores de riesgo cardiovascular y comorbilidades.
+
+Volviendo a la viñeta clínica, nuestro paciente curso con un episodio de FA
+paroxística que fue adecuadamente resuelto.
 
 \closearticle
 
