--- a/V01E01/gaceta.tex
+++ b/V01E01/gaceta.tex
@@ -179,22 +179,26 @@ panameño\cite{pezzullo2016}.
 
 Paciente masculino de 64 años es traído al servicio de urgencias por personal
 de prehospitalaria por síncope con previa historia de palpitaciones, mareos,
-debilidad y diaforesis. Sus signos vitales son: PA 160/106 mmHg, FC 131 lpm,
-FR 21 cpm, SpO2 95\%, peso 125 kg, estatura 1,65 m. Tiene como antecedentes
-importantes tabaquismo y dislipidemia.
+debilidad y diaforesis. Sus signos vitales son: PA 160/106 mmHg, FC 141 lpm,
+FR 21 cpm, SpO2 92\%, peso 125 kg, estatura 1,65 m. Tiene como antecedentes
+importantes tabaquismo y dislipidemia. Se encuentra desorientado y disneico.
 
 \end{boxClinica}
 
-Dentro del abordaje del paciente presentado en la viñeta clínica anterior,
+Dentro del abordaje inicial del paciente de la viñeta clínica propuesta, y con
+cualquier paciente que se presente con FA a un servicio de urgencias,
+el objetivo de tratamiento es lograr la estabilización hemodinámica,
+controlar los síntomas y prevenir las complicaciones. Dentro de la
+estabilización inicial debemos obtener acceso venoso, O$_{\text{2}}$
+suplementario para mantener saturación $\geq$ 92\% y monitorización cardíaca
+continua.
+
+Para establecer el diagnóstico del paciente presentado en la viñeta clínica,
 además de la historia clínica y su respectivo examen físico se debe realizar un
 electrocardiograma. El ECG tiene una clase y nivel de evidencia IB en FA y es
-diagnóstico de FA si un ECG de 12 derivadas o en un trazo de 1 derivación
-$\geq$ 30 segundos se presentan ondas P no discernibles e intervalos RR
+diagnóstico de FA si un ECG de 12 derivadas o un trazo de 1 derivación
+$\geq$ 30 segundos presenta ondas P no discernibles e intervalos RR
 irregulares\cite{guiaesc_2021}.
-
-Dentro de la viñeta clínica propuesta, destacan los factores de riesgo
-cardiovasculares clásicos. En este paciente, están presentes obesidad,
-tabaquismo y dislipidemia.
 
 La causa raíz de la FA la encontramos en la electropatología de focos ectópicos
 que se ubican el 95\% de las veces en las venas pulmonares. Este sustrato
@@ -227,20 +231,38 @@ de la miocardiopatía auricular.
 
 Se considera al ECG de 12 derivadas como la técnica estándar de diagnóstico en
 FA\cite{mairesse2017}. Sin embargo para el cribado un intervención muy
-costo-efectiva es la palpación del pulso con una sensibilidad de 87-97\% y
-especificidad de 70-81\%, esta simple intervención tiene una clase y nivel de
-evidencia IB. Es destacable también el uso de monitores de presión arterial
-automatizados y el uso de dispositivos \emph{wereables} como relojes o bandas
-electrónicas que con sus algoritmos de fotopletismografía ofrecen también una
-buena sensibilidad y especificidad, incluso con clase y nivel de evidencia
-IB\cite{guiaesc_2021}.
+costo-efectiva es la palpación del pulso, esta técnica tiene una sensibilidad
+de 87-97\% y especificidad de 70-81\%, esta simple intervención tiene una clase
+y nivel de evidencia IB. Es destacable también el uso de monitores de presión
+arterial automatizados y el uso de dispositivos \emph{wereables} como relojes
+o bandas electrónicas que con sus algoritmos de fotopletismografía ofrecen
+también una buena sensibilidad y especificidad, incluso con clase y nivel de
+evidencia IB\cite{guiaesc_2021}.
 
 Regresando al paciente de la viñeta clínica, sin antecedentes de FA previa
 conocida, habiendo realizado el ECG de 12 derivadas, con toda seguridad nos
-encontramos ante un paciente con FA paroxística. Continuando el abordaje de
+encontramos ante un paciente con FA paroxística, pero que está
+hemodinámicamente inestable. Es prácticamente mandatorio en este punto,
+utilizar el protocolo del ACLS ya que estamos ante un paciente con una
+taquicardia inestable, la recomendación aquí según el protocolo ACLS es
+cardioversión eléctrica.
+
+% \begin{wrapfigure}{L}{0.77\textwidth}
+% 	\begin{center}
+% 		\vspace{-25pt}
+% 		\includegraphics[width=0.75\textwidth]{ecg-fa.png}
+% 	\end{center}
+% 	\caption*{ECG 12 derivadas. FA de respuesta ventricular rápida}
+% \end{wrapfigure}
+
+Continuando el abordaje de
 este paciente, implementamos la estrategia de la vía ABC\cite{lip_abc_2017}.
 «A», anticoagulacion / prevención del ictus; «B», buen control de los síntomas;
 «C», control de los factores de riesgo cardiovascular y comorbilidades.
+
+Siguiendo la vía ABC, hay que estratificar el riesgo de sufrir un ictus
+isquémico o trombótico usando las escales CHA$_{\text{2}}$DS$_{\text{2}}$-VASc
+y HAS-BLED respectivamente.
 
 Volviendo a la viñeta clínica, nuestro paciente curso con un episodio de FA
 paroxística que fue adecuadamente resuelto.
