--- a/V01E01/referencias.bib
+++ b/V01E01/referencias.bib
@@ -71,7 +71,7 @@
 }
 
 @article{guiaesc_2021,
-	title = {Guía ESC 2020 sobre el diagnóstico y tratamiento de la fibrilación auricular, desarrollada en colaboración de la European Association of Cardio-Thoracic Surgery (EACTS)},
+	title = {Guía ESC 2020 sobre el diagnóstico y tratamiento de la fibrilación auricular, desarrollada en colaboración de la EACTS},
 	volume = {74},
 	issn = {0300-8932},
 	url = {http://www.revespcardiol.org/es-guia-esc-2020-sobre-el-articulo-S0300893220306953},
@@ -96,7 +96,7 @@
 }
 
 @article{mairesse2017,
-	title = {Screening for atrial fibrillation: a {European} {Heart} {Rhythm} {Association} ({EHRA}) consensus document endorsed by the {Heart} {Rhythm} {Society} ({HRS}), {Asia} {Pacific} {Heart} {Rhythm} {Society} ({APHRS}), and {Sociedad} {Latinoamericana} de {Estimulación} {Cardíaca} y {Electrofisiología} ({SOLAECE})},
+	title = {Screening for atrial fibrillation: a {EHRA} consensus document endorsed by the {HRS}, {APHRS}, and {SOLAECE}},
 	volume = {19},
 	issn = {1099-5129},
 	url = {https://doi.org/10.1093/europace/eux177},
