--- a/src/V01E01/referencias.bib
+++ b/src/V01E01/referencias.bib
@@ -129,3 +129,14 @@
 	year = {2017},
 	pages = {627--628},
 }
+
+@article{aha2020,
+	author = {Ashish R. Panchal  and Jason A. Bartos  and José G. Cabañas  and Michael W. Donnino  and Ian R. Drennan  and Karen G. Hirsch  and Peter J. Kudenchuk  and Michael C. Kurz  and Eric J. Lavonas  and Peter T. Morley  and Brian J. O’Neil  and Mary Ann Peberdy  and Jon C. Rittenberger  and Amber J. Rodriguez  and Kelly N. Sawyer  and Katherine M. Berg  and Julie Arafeh  and Justin L. Benoit  and Maureen Chase  and Antonio Fernandez  and Edison Ferreira de Paiva  and Bryan L. Fischberg  and Gustavo E. Flores  and Peter Fromm  and Raul Gazmuri  and Blayke Courtney Gibson  and Theresa Hoadley  and Cindy H. Hsu  and Mahmoud Issa  and Adam Kessler  and Mark S. Link  and David J. Magid  and Keith Marrill  and Tonia Nicholson  and Joseph P. Ornato  and Garrett Pacheco  and Michael Parr  and Rahul Pawar  and James Jaxton  and Sarah M. Perman  and James Pribble  and Derek Robinett  and Daniel Rolston  and Comilla Sasson  and Sree Veena Satyapriya  and Travis Sharkey  and Jasmeet Soar  and Deb Torman  and Benjamin Von Schweinitz  and Anezi Uzendu  and Carolyn M. Zelop  and David J. Magid },
+	title = {Part 3: Adult Basic and Advanced Life Support: 2020 American Heart Association Guidelines for Cardiopulmonary Resuscitation and Emergency Cardiovascular Care},
+	journal = {Circulation},
+	volume = {142},
+	number = {16\_suppl\_2},
+	pages = {S366--S468},
+	year = {2020},
+	doi = {10.1161/CIR.0000000000000916},
+}
