--- a/src/V01E01/referencias.bib
+++ b/src/V01E01/referencias.bib
@@ -110,7 +110,6 @@
 	pages = {1589--1623},
 }
 
-
 @article{lip_abc_2017,
 	title = {The ABC pathway: an integrated approach to improve AF management},
 	volume = {14},
@@ -139,4 +138,17 @@
 	pages = {S366--S468},
 	year = {2020},
 	doi = {10.1161/CIR.0000000000000916},
+}
+
+@article{maxdefib19,
+	author = {Schmidt, Anders S and Lauridsen, Kasper G and Torp, Peter and Bach, Leif F and Rickers, Hans and Løfgren, Bo},
+	title = "{Maximum-fixed energy shocks for cardioverting atrial fibrillation}",
+	journal = {European Heart Journal},
+	volume = {41},
+	number = {5},
+	pages = {626-631},
+	year = {2019},
+	month = {08},
+	issn = {0195-668X},
+	doi = {10.1093/eurheartj/ehz585},
 }
