WIP - añadido logo y expandido v01e01

--- a/src/V01E01/gaceta.tex
+++ b/src/V01E01/gaceta.tex
@@ -75,7 +75,7 @@
 \SetPaperName{Gaceta Galénica}
 \SetHeaderName{Gaceta Galénica}
 \SetPaperLocation{Ciudad de Panamá}
-\SetPaperSlogan{''\textit{Ciencia y Verdad}''}
+\SetPaperSlogan{''\textit{Ciencia, Verdad, Academia}''}
 \SetPaperPrice{SU-PMMV}
 
 \newcommand{\NewsAuthor}[1]{%
@@ -137,7 +137,7 @@ varios idiomas y ser ávida lectora de literatura universal\cite{panamerica10}.
 
 \begin{wrapfigure}{L}{0.18\textwidth}
 	\begin{center}
-		\vspace{-25pt}
+		\vspace{-10pt}
 		\includegraphics[width=0.17\textwidth]{mmvaldes.jpg}
 	\end{center}
 	\caption*{Lic. Manuel María Valdés}
@@ -155,6 +155,10 @@ expresidente Belisario Porras Barahona, lo que lleva a manos, en aquel entonces,
 al Presidente Arnulfo Arias Madrid en 1941 a la firma de la Ley 23 del 21 de
 marzo de ese año, publicada en la Gaceta Oficial No. 8481 de marzo de
 1941\cite{Pinock95},\cite{gaceta1941}. Nace así la Caja de Seguro Social.
+Corresponde a Manuel María Valdés el sitial de honor de ser el primer
+director general de la Caja de Seguro Social, acompañado en la Junta Directiva
+por Ricardo De La Guardia, Eduardo De Alba, Manuel Jaén, Eduardo Vallarino y
+Pablo Abad.
 
 Dedico gran parte de su vida al ejercicio del derecho en los bufetes <<Valdés y
 Valdés>>, trabajando junto a su hermano Eduardo Valdés; y <<Valdés, Valdés y
@@ -179,7 +183,7 @@ en los servicios de urgencias. En mayores de 65 años tiene una incidencia
 cercana al 10\% y se asocia a una serie de comorbilidades y predispone al
 desarrollo de patologías de gran morbimortalidad como el ictus isquémico y el
 infarto agudo al miocardio. Se estima una prevalencia para América Latina y El
-Caribe en 430 de cada 100000 habitantes\cite{brundel_atrial_2022}.
+Caribe en 430 de cada 100 000 habitantes\cite{brundel_atrial_2022}.
 
 En Panamá, Pezzullo y colab. estimaron que el 0.9\% de la población adulta
 mayor de 20 años es afectada por la FA y que en el año 2015, la FA representó
