WIP - añadido ecg en v01e01

--- a/src/V01E01/gaceta.tex
+++ b/src/V01E01/gaceta.tex
@@ -109,7 +109,7 @@ médicos que desempeñan sus labores en los distintos servicios de urgencias
 médico-quirúrgicas en instalaciones de primer y segundo nivel de atención en
 Panamá.
 
-Se publica como un boletín digital informativo corto, de una a dos páginas de
+Se publica como un boletín digital informativo corto, de una a cuatro páginas de
 extensión distribuido por canales digitales. El tema central de la publicación
 se presenta acompañado de una viñeta clínica, a partir del cual se discutirán
 de manera práctica los aspectos más importantes de la patología abordada con su
@@ -176,7 +176,7 @@ despedido en noviembre de ese año\cite{Lot68}.
 \closearticle
 
 
-\headline{Fibrilación atrial: Diagnóstico y manejo}
+\headline{Fibrilación atrial: Diagnóstico y manejo en Urgencias}
 
 La fibrilación atrial (FA) es una patología que se ve con regular frecuencia
 en los servicios de urgencias. En mayores de 65 años tiene una incidencia
@@ -200,6 +200,12 @@ importantes tabaquismo y dislipidemia. Se encuentra desorientado y disneico.
 
 \end{boxClinica}
 
+\begin{figure*}[ht]
+	\includegraphics[width=\linewidth]{ecg-fa.png}
+	\caption{ECG 12 derivadas. FA de respuesta ventricular rápida}
+	\label{fig:ecg-fa}
+\end{figure*}
+
 Dentro del abordaje inicial del paciente de la viñeta clínica propuesta, y con
 cualquier paciente que se presente con FA a un servicio de urgencias,
 el objetivo de tratamiento es lograr la estabilización hemodinámica,
@@ -214,7 +220,8 @@ además de la historia clínica y su respectivo examen físico se debe realizar 
 electrocardiograma. El ECG tiene una clase y nivel de evidencia IB en FA y es
 diagnóstico de FA si un ECG de 12 derivadas o un trazo de 1 derivación
 $\geq$ 30 segundos presenta ondas P no discernibles e intervalos RR
-irregulares\cite{guiaesc_2021}.
+irregulares\cite{guiaesc_2021}. Tal como se ve en la figura \ref{fig:ecg-fa},
+este ECG tiene una frecuencia de 140 lpm.
 
 La causa raíz de la FA la encontramos en la electropatología de focos ectópicos
 que se ubican el 95\% de las veces en las venas pulmonares. Este sustrato
@@ -264,11 +271,6 @@ taquicardia inestable, la recomendación aquí según el protocolo ACLS es
 cardioversión eléctrica inmediata del paciente, considerando la
 sedación previa si fuera necesaria\cite{aha2020}.
 
-% \begin{figure*}[ht]
-% \includegraphics[width=\linewidth]{ecg-fa.png}
-% \caption{ECG 12 derivadas. FA de respuesta ventricular rápida}
-% \end{figure*}
-
 Según la Guía 2020 de fibrilación auricular de la ESC, la recomendación
 con un paciente inestable y con fibrilación atrial es la cardioversión
 eléctrica urgente a la máxima dosis permitidida por el
@@ -293,12 +295,15 @@ y HAS-BLED respectivamente.
 Volviendo a la viñeta clínica, nuestro paciente curso con un episodio de FA
 paroxística que fue adecuadamente resuelto.
 
+\end{multicols}
+
 \closearticle
+
+\begin{multicols}{3}
 
 \printbibliography[heading=none]
 
-\closearticle
-
 \end{multicols}
+
 
 \end{document}
