--- a/src/V01E01/gaceta.tex
+++ b/src/V01E01/gaceta.tex
@@ -176,7 +176,7 @@ despedido en noviembre de ese año\cite{Lot68}.
 \closearticle
 
 
-\headline{Fibrilación atrial: Diagnóstico y manejo en Urgencias}
+\headline{Fibrilación atrial: diagnóstico y manejo en urgencias}
 
 La fibrilación atrial (FA) es una patología que se ve con regular frecuencia
 en los servicios de urgencias. En mayores de 65 años tiene una incidencia
@@ -221,7 +221,7 @@ electrocardiograma. El ECG tiene una clase y nivel de evidencia IB en FA y es
 diagnóstico de FA si un ECG de 12 derivadas o un trazo de 1 derivación
 $\geq$ 30 segundos presenta ondas P no discernibles e intervalos RR
 irregulares\cite{guiaesc_2021}. Tal como se ve en la figura \ref{fig:ecg-fa},
-este ECG tiene una frecuencia de 140 lpm.
+este ECG tiene una frecuencia de 150 lpm.
 
 La causa raíz de la FA la encontramos en la electropatología de focos ectópicos
 que se ubican el 95\% de las veces en las venas pulmonares. Este sustrato
@@ -252,16 +252,6 @@ Los avances en la clasificación, por ejemplo de FA paroxística a FA persistent
 implican un avance en el remodelado estructural auricular o un empeoramiento
 de la miocardiopatía auricular.
 
-Se considera al ECG de 12 derivadas como la técnica estándar de diagnóstico en
-FA\cite{mairesse2017}. Sin embargo para el cribado un intervención muy
-costo-efectiva es la palpación del pulso, esta técnica tiene una sensibilidad
-de 87-97\% y especificidad de 70-81\%, esta simple intervención tiene una clase
-y nivel de evidencia IB. Es destacable también el uso de monitores de presión
-arterial automatizados y el uso de dispositivos \emph{wereables} como relojes
-o bandas electrónicas que con sus algoritmos de fotopletismografía ofrecen
-también una buena sensibilidad y especificidad, incluso con clase y nivel de
-evidencia IB\cite{guiaesc_2021}.
-
 Regresando al paciente de la viñeta clínica, sin antecedentes de FA previa
 conocida, habiendo realizado el ECG de 12 derivadas, con toda seguridad nos
 encontramos ante un paciente con FA paroxística, pero que está
@@ -278,15 +268,47 @@ desfibrilador\cite{maxdefib19} e iniciar lo antes posible tratamiento
 anticoagulante\cite{guiaesc_2021}, esta recomendación tiene una clase y nivel
 de evidencia IB. Luego de la cardioversión eléctrica se puede considerar
 la administración de amiodarona para el control inmediato de la frecuencia
-cardíaca y esto también puede llevar a una disminución adicional de la
+cardíaca y también lleva a una disminución adicional de la
 presión arterial\cite{guiaesc_2021}, esta intervención tiene una clase de
 recomendación IIb y un nivel de evidencia B, teniendo así evidencia
 moderada que la respalde.
 
-Continuando el abordaje de
-este paciente, implementamos la estrategia de la vía ABC\cite{lip_abc_2017}.
-«A», anticoagulacion / prevención del ictus; «B», buen control de los síntomas;
-«C», control de los factores de riesgo cardiovascular y comorbilidades.
+Si el paciente no estuviera hemodinámicamente inestable y con una presión
+arterial limítrofe y frecuencia cardíaca inferior a 150 lpm, no se requerirá
+una cardioversión eléctrica inmediata, pero hay que considerar que el uso de
+amiodarona puede disminuir la presión arterial del paciente. En estos casos,
+se pueden emplear fluidoterapia IV para elevar la PA lo suficiente para emplear
+la amiodarona, con un seguimiento estrecho del paciente. Se podría emplear
+también bolos de fenilefrina o diltiazem para evitar la
+hipotensión\cite{lee2011}, sin embargo, estos no están disponibles en nuestro
+medio.
+
+Mientras abordamos este paciente debemos ir buscando las causas del episodio
+de fibrilación auricular, ya que se sabe que un gran porcentaje de estos
+pacientes tienen una patología subyacente\cite{comorbfa}.
+En los exámenes de laboratorio a solicitar con un paciente con FA tenemos el
+hemograma completo, con el interés de documentar procesos infecciosos que
+puedan descompensar una patología de fondo como falla cardíaca y lleven a la
+aparición de un episodio de FA; una química sanguínea que incluya electrolitos
+séricos, glicemia, pruebas de función renal y hepática; niveles séricos de
+magnesio, ya que se ha documentado que niveles bajos tienen relación con la
+aparición de paroxismos de FA; niveles de TSH, ya que el hipertiroidismo
+también se relaciona con episodios de FA; niveles de troponina y BNP, para
+evaluar por patología coronaria y falla cardíaca; dímero D, por considerar
+la sospecha de un tromboembolismo pulmonar; y un perfil de coagulación.
+
+Entre los estudios de imagen, la radiografía PA de tórax debe ser realizada
+en todo paciente con FA para evaluar comorbilidades como neumonía, falla
+cardíaca, cardiomegalia y la presencia de marcapasos cardíaco.
+
+La ecocardiografía se recomienda de manera ambulatoria para pacientes con FA
+diagnosticada por primera vez. La ecocardiografía transtorácica se recomienda
+en pacientes con más de 48 horas de síntomas y más de 3 semanas sin ser
+anticoagulados\cite{ecoamb19}. No se recomienda realizar ecocardiografía en
+pacientes que han sido cardiovertidos y anticoagulados, pues el riesgo de
+desarrollo de tromboembolismo es menor al 1\%\cite{eco13}.
+
+Continuando el abordaje de este paciente, implementamos la estrategia de la vía ABC\cite{lip_abc_2017}. «A», anticoagulacion / prevención del ictus; «B», buen control de los síntomas; «C», control de los factores de riesgo cardiovascular y comorbilidades.
 
 Siguiendo la vía ABC, hay que estratificar el riesgo de sufrir un ictus
 isquémico o trombótico usando las escales CHA$_{\text{2}}$DS$_{\text{2}}$-VASc
@@ -294,6 +316,17 @@ y HAS-BLED respectivamente.
 
 Volviendo a la viñeta clínica, nuestro paciente curso con un episodio de FA
 paroxística que fue adecuadamente resuelto.
+
+Se considera al ECG de 12 derivadas como la técnica estándar de diagnóstico en
+FA\cite{mairesse2017}. Sin embargo para el cribado en población general que
+se encuentra asintomática, una intervención muy costo-efectiva es la palpación
+del pulso, esta técnica tiene una sensibilidad de 87-97\% y especificidad de
+70-81\%, esta simple intervención tiene una clase y nivel de evidencia IB. Es
+destacable también el uso de monitores de presión arterial automatizados y el
+uso de dispositivos \emph{wereables} como relojes o bandas electrónicas que
+con sus algoritmos de fotopletismografía ofrecen también una buena
+sensibilidad y especificidad, incluso con clase y nivel de evidencia
+IB\cite{guiaesc_2021}.
 
 \end{multicols}
 
