--- a/src/V01E01/referencias.bib
+++ b/src/V01E01/referencias.bib
@@ -152,3 +152,48 @@
 	issn = {0195-668X},
 	doi = {10.1093/eurheartj/ehz585},
 }
+
+@article{ecoamb19,
+	author = {Craig T. January  and L. Samuel Wann  and Hugh Calkins  and Lin Y. Chen  and Joaquin E. Cigarroa  and Joseph C. Cleveland  and Patrick T. Ellinor  and Michael D. Ezekowitz  and Michael E. Field  and Karen L. Furie  and Paul A. Heidenreich  and Katherine T. Murray  and Julie B. Shea  and Cynthia M. Tracy  and Clyde W. Yancy },
+	title = {2019 AHA/ACC/HRS Focused Update of the 2014 AHA/ACC/HRS Guideline for the Management of Patients With Atrial Fibrillation: A Report of the American College of Cardiology/American Heart Association Task Force on Clinical Practice Guidelines and the Heart Rhythm Society in Collaboration With the Society of Thoracic Surgeons},
+	journal = {Circulation},
+	volume = {140},
+	number = {2},
+	pages = {e125-e151},
+	year = {2019},
+	doi = {10.1161/CIR.0000000000000665}
+}
+
+@article{eco13,
+	title = {Thromboembolic Complications After Cardioversion of Acute Atrial Fibrillation: The FinCV (Finnish CardioVersion) Study},
+	volume = {62},
+	issn = {0735-1097},
+	doi = {10.1016/j.jacc.2013.04.089},
+	number = {13},
+	journal = {Journal of the American College of Cardiology},
+	author = {Airaksinen, K. E. Juhani and Grönberg, Toni and Nuotio, Ilpo and Nikkinen, Marko and Ylitalo, Antti and Biancari, Fausto and Hartikainen, Juha E. K.},
+	year = {2013},
+	keywords = {anticoagulation, atrial fibrillation, cardioversion, stroke, thromboembolism},
+	pages = {1187--1192},
+}
+
+@article{lee2011,
+	title = {Low-dose diltiazem in atrial fibrillation with rapid ventricular response},
+	volume = {29},
+	issn = {0735-6757},
+	doi = {10.1016/j.ajem.2010.03.021},
+	number = {8},
+	journal = {The American Journal of Emergency Medicine},
+	author = {Lee, Jungyoup and Kim, Kyuseok and Lee, Christopher C. and Nam, Yeoun Woo and Lee, Jin Hee and Rhee, Joong Eui and Singer, Adam J. and Kim, Kyung Su and Ro, Youngsun},
+	year = {2011},
+	pages = {849--854},
+}
+
+@article{comorbfa,
+	title = {Emergency Department Patients With Atrial Fibrillation or Flutter and an Acute Underlying Medical Illness May Not Benefit From Attempts to Control Rate or Rhythm},
+	author = {Scheuermeyer, Frank X. and Pourvali, Reza and Rowe, Brian H. and Grafstein, Eric and Heslop, Claire and MacPhee, Jan and McGrath, Lorraine and Ward, John and Heilbron, Brett and Christenson, Jim},
+	journal = {Annals of Emergency Medicine},
+	volume = {65},
+	number = {5},
+	pages = {511 - 522.e2},
+}
